# ghback/api/urls.py
@@ -16,7 +16,7 @@ urlpatterns = [
          name='delete_account'),
     path('parser', views.parser, name='parser'),
     path('categories', views.categories_list, name='categories_list'),
-    path('top', views.categories_top, name='categories_top'),
+    path('queries/top', views.queries_top, name='queries_top'),
     path('export/queries', views.export_queries, name='export_queries'),
     path('export/categories', views.export_categories, name='export_categories'),
     path('data', views.data, name='data'),
